--- a/Project D/UserSettings/Search.settings
+++ b/Project D/UserSettings/Search.settings
@@ -8,6 +8,21 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
+	"picker_window_position_offset.7E63D72B" = "618.6667;333.3333;320;550"
+	"picker_search_text.7E63D72B" = ""
+	"last_search.7E63D72B" = ""
+	"OpenInspectorPreview.7E63D72B" = "0"
+	"currentGroup.7E63D72B" = "all"
+	"picker_window_position_offset.3172962C" = "616.6667;388.6667;320;550"
+	"picker_search_text.3172962C" = ""
+	"last_search.3172962C" = ""
+	"OpenInspectorPreview.3172962C" = "0"
+	"currentGroup.3172962C" = "all"
+	"picker_window_position_offset.74AD8FDB" = "710.6667;388.6667;320;550"
+	"picker_search_text.74AD8FDB" = "def "
+	"last_search.74AD8FDB" = "def "
+	"OpenInspectorPreview.74AD8FDB" = "0"
+	"currentGroup.74AD8FDB" = "all"
 }
 providers = {
 	log = {
